syntax = "proto3";

package didcomm.messaging;

option csharp_namespace = "DIDComm.Messaging";
option go_package = "didcomm.org/messaging";
option java_package = "DIDComm.Messaging.Proto";
option java_outer_classname="API";

import "security.proto";
import "google/protobuf/struct.proto";

message GenerateKeyRequest {
    bytes seed = 1;
    Crv key_type = 2;
}
message GenerateKeyResponse {
    JsonWebKey key = 1;
}
message ConvertKeyRequest {
    JsonWebKey key = 1;
    Crv target_type = 2;
}
message ConvertKeyResponse {
    JsonWebKey key = 1;
}

message SignRequest {
    bytes payload = 1;
    JsonWebKey key = 2;
    SignedMessage append_to = 3;
}

message SignResponse {
    SignedMessage message = 1;
}

message VerifyRequest {
    SignedMessage message = 1;
    JsonWebKey key = 2;
}

message VerifyResponse {
    bool is_valid = 1;
}

message PackRequest {
    JsonWebKey sender_key = 1;
    JsonWebKey receiver_key = 2;
    bytes associated_data = 3;
    bytes plaintext = 4;
    EncryptionMode mode = 5;
    EncryptionAlgorithm algorithm = 6;
}

message PackResponse {
    EncryptedMessage message = 1;
}

message UnpackRequest {
    JsonWebKey sender_key = 1;
    JsonWebKey receiver_key = 2;

    EncryptedMessage message = 3;
}

message UnpackResponse {
   bytes plaintext = 1;
}

message GetDidDocumentRequest {
    JsonWebKey key = 1;
}

message GetDidDocumentResponse {
    google.protobuf.Struct did_document = 1;
}

message JsonWebKey {
    string key_id = 1                               [json_name="kid"];
    string x = 2;
    string y = 3;
    string d = 4;
    Crv crv = 5;
    KeyType kty = 6;
}

enum Crv {
  Ed25519 = 0;
  X25519 = 1;
  P256 = 2;
  Bls12381_G2 = 3;
  secp256k1 = 4;
}

enum KeyType {
  OKP = 0;
  EC = 1;
}
